--- a/projects/storefront/src/app/contact/contact-page/contact-page.component.html
+++ b/projects/storefront/src/app/contact/contact-page/contact-page.component.html
@@ -38,7 +38,7 @@
         <div *ngIf="submitError" class="alert alert-danger">{{ submitError }}</div>
 
         <div class="form-actions">
-          <button type="submit" class="submit-button" [disabled]="contactForm.invalid || isSubmitting">
+          <button type="submit" class="submit-button">
             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
               fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M5 12h14" />
