--- a/projects/storefront/src/app/checkout/checkout-page/checkout-page.component.scss
+++ b/projects/storefront/src/app/checkout/checkout-page/checkout-page.component.scss
@@ -44,7 +44,7 @@
 &__grid {
     display: grid;
     grid-template-columns: 1fr; 
-
+    row-gap: 4rem;
     @media (min-width: 1024px) {
       grid-template-columns: repeat(12, 1fr);
       gap: 3rem;
@@ -52,7 +52,7 @@
   }
 
   &__grid-left {
-    grid-row: 1; 
+    grid-row: 2; 
     grid-column: 1 / -1;
 
     @media (min-width: 1024px) {
@@ -63,7 +63,7 @@
   }
 
   &__grid-right {
-    grid-row: 2; 
+    grid-row: 1; 
     grid-column: 1 / -1;
 
     @media (min-width: 1024px) {
